# Tile

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
docs/: LICENSE.txt
editor/: CMakeLists.txt  main_editor.cpp  template.html
engine/: CMakeLists.txt
engine/include/: application.h  camera.h  encoder.h  exporter.h  importer.h  input.h  plane.h  renderer.h  shader.h  sprite.h  spritebatch.h  spritesheet.h  texture.h  tilemap.h
engine/src/: application.cpp  encoder.cpp  exporter.cpp  importer.cpp  input.cpp  plane.cpp  renderer.cpp  shader.cpp  sprite.cpp  spritebatch.cpp  spritesheet.cpp  texture.cpp
ext/: CMakeLists.txt
ext/emscripten-glfw-master/: CMakeLists.txt
ext/emscripten-glfw-master/examples/example_offscreen_canvas/: README.md  main.cpp  shell.html
ext/imgui-master/: CMakeLists.txt
